--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,12 +22,8 @@
 		<span class="navbar-brand">Sudoku Game</span>
 	</nav>
 
-	<div id="app" class="container-fluid">
+	<div id="app" class="container m-3">
 
-		<p>
-			<router-link to="/foo">Go to Foo</router-link>
-			<router-link to="/bar">Go to Bar</router-link>
-		</p>
 		<router-view></router-view>
 
 	</div>
