make board beautiful

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,11 +22,11 @@
 		<span class="navbar-brand">Sudoku Game</span>
 	</nav>
 
-	<div id="app" class="container m-3">
+	<b-container id="app" class="m-3">
 
 		<router-view></router-view>
 
-	</div>
+	</b-container>
 
 
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
