--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,6 +53,7 @@
 	<script
 		src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
 
 	<!-- Main Vue Program -->
 	<script src="vue/home.vue.js" defer></script>
