--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,13 @@
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			
 		<span class="navbar-brand">Sudoku Game</span>
+		<ul class="navbar-nav mr-auto">
+
+			<li class="nav-item"><a class="nav-link"
+				href="https://kachinc.com">kachinc.com</a></li>
+		</ul>
 	</nav>
 
 	<b-container fluid id="app" class="p-2"> <router-view></router-view>
@@ -57,7 +63,7 @@
 
 	<!-- Main Vue Program -->
 	<script src="vue/home.vue.js" defer></script>
-	
+
 </body>
 </html>
 
