--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,9 +41,15 @@
 			<li class="nav-item"><a class="nav-link"
 				href="https://kachinc.com">kachinc.com</a></li>
 		</ul>
+		
+		<span class="nav-link disabled" th:text="${env}"></span>
 	</nav>
 
-	<b-container fluid id="app" class="p-2"> <router-view></router-view>
+	<b-container fluid id="app" class="p-2">
+	
+	<router-view></router-view>
+	
+	
 
 	</b-container>
 
