--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--  Adsense -->
-<script data-ad-client="ca-pub-1367549493807492" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+<script th:if="${env == 'prod'}" data-ad-client="ca-pub-1367549493807492" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <!-- Framework CSS -->
 <link rel="stylesheet"
@@ -13,7 +14,7 @@
 	integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
 	crossorigin="anonymous">
 <link type="text/css" rel="stylesheet"
-	href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
+	href="https://unpkg.com/bootstrap-vue@2.6.1/dist/bootstrap-vue.min.css" />
 
 <!-- Cloud Fonts -->
 <link rel="stylesheet"
@@ -22,11 +23,13 @@
 	href="https://fonts.googleapis.com/css?family=Anonymous+Pro">
 
 <!-- Custom CSS -->
-<link rel="stylesheet" type="text/css" href="css/common.css">
+<link rel="stylesheet" type="text/css" th:href="'css/common.css?v='+${buildtime}">
 
 <!--  Framework JS -->
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
-<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+<script th:if="${env == 'dev'}" src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+<script th:unless="${env == 'dev'}" src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.min.js"></script>
+
+<script src="https://unpkg.com/vue-router@3.4.3/dist/vue-router.min.js"></script>
 
 <title>Sudoku Game</title>
 </head>
@@ -66,12 +69,12 @@
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
 		crossorigin="anonymous"></script>
 	<script
-		src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
-	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		src="https://unpkg.com/bootstrap-vue@2.6.1/dist/bootstrap-vue.min.js"></script>
+	<script src="https://unpkg.com/axios@0.20.0/dist/axios.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
 
 	<!-- Main Vue Program -->
-	<script src="vue/home.vue.js" defer></script>
+	<script th:src="'vue/home.vue.js?v='+${buildtime}" defer></script>
 
 </body>
 </html>
