--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,6 +1,10 @@
 body{
 	font-family:'Raleway', sans-serif;
-	font-size: 1.5rem;
+	font-size: 1rem;
+}
+
+.jumbotron h1 {
+	font-size: 3.5rem;
 }
 
 .board {
