--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -36,7 +36,7 @@
 
 	<div class="jumbotron jumbotron-fluid">
 		<div class="container">
-			<h1 class="display-4">Oops! 404 Not Found!</h1>
+			<h1 class="display-4">Oops! An error has occurred!</h1>
 			<br>
 			<p class="lead"><a href="/"><button type="button" class="btn btn-danger btn-lg">Back to home</button></a></p>
 		</div>
