--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,9 @@
 	integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
 	crossorigin="anonymous">
 <link type="text/css" rel="stylesheet"
-	href="https://unpkg.com/bootstrap-vue@2.6.1/dist/bootstrap-vue.min.css" />
+	href="https://unpkg.com/bootstrap-vue@2.16.0/dist/bootstrap-vue.min.css" />
+<link type="text/css" rel="stylesheet"
+href="https://unpkg.com/bootstrap-vue@2.16.0/dist/bootstrap-vue-icons.min.css" />
 
 <!-- Cloud Fonts -->
 <link rel="stylesheet"
@@ -71,6 +73,8 @@
 		crossorigin="anonymous"></script>
 	<script
 		src="https://unpkg.com/bootstrap-vue@2.16.0/dist/bootstrap-vue.min.js"></script>
+	<script
+	src="https://unpkg.com/bootstrap-vue@2.16.0/dist/bootstrap-vue-icons.min.js"></script>
 	<script src="https://unpkg.com/axios@0.20.0/dist/axios.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
 
