--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -54,3 +54,13 @@ body{
   display: table;
 }
 
+.blink_me {
+  animation: blinker 1s step-start infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
+}
+
