--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,17 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Framework CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-	integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-	crossorigin="anonymous">
+<link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}" />
 
 <!-- Cloud Fonts -->
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/css?family=Raleway">
 
 <!-- Custom CSS -->
-<link rel="stylesheet" type="text/css" href="css/common.css">
+<link rel="stylesheet" type="text/css" th:href="'css/common.css?v='+${buildtime}">
 
 <title>Sudoku Game</title>
 </head>
@@ -43,17 +40,9 @@
 	</div>
 
 	<!-- Framework JS -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-		crossorigin="anonymous"></script>
+	<script th:src="@{/webjars/jquery/3.5.1/jquery.slim.min.js}"></script>	
+		<script th:src="@{/webjars/popper.js/1.16.0/umd/popper.min.js}"></script>
+		<script th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
 
 
 
