update message and link

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
 			<span class="navbar-brand">Sudoku Game</span>
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="https://kachinc.com">kachinc.com</a>
+					<a class="nav-link" href="https://johnsonhk.com">johnsonhk.com</a>
 				</li>
 			</ul>
 		</nav>
