--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,20 +6,22 @@
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		
 		<!-- Framework CSS -->
-		<link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}" />
-		<link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap-vue/2.16.0/dist/bootstrap-vue.min.css}" />
-		<link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap-vue/2.16.0/dist/bootstrap-vue-icons.min.css}" />
+		<link type="text/css" rel="stylesheet" href="css/bootstrap.css" />
+		<link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@2.6.1/dist/bootstrap-vue.min.css" />
+		<link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@2.6.1/dist/bootstrap-vue-icons.min.css" />
 		
 		<!-- Cloud Fonts -->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anonymous+Pro">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo">
+		
+		
 		
 		<!-- Custom CSS -->
 		<link rel="stylesheet" type="text/css" th:href="'css/common.css?v='+${buildtime}">
 		
 		<!--  Framework JS -->
-		<script th:if="${env == 'dev'}" th:src="@{/webjars/vue/2.6.11/vue.js}"></script>
-		<script th:unless="${env == 'dev'}" th:src="@{/webjars/vue/2.6.11/vue.min.js}"></script>
+		<script th:if="${env == 'dev'}" src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+		<script th:unless="${env == 'dev'}" src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.min.js"></script>
 		<script src="https://unpkg.com/vue-router@3.4.3/dist/vue-router.min.js"></script>
 		
 		<title>Sudoku Game</title>
@@ -27,7 +29,7 @@
 	
 	<body>
 	
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<span class="navbar-brand">Sudoku Game</span>
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
@@ -43,13 +45,24 @@
 		</b-container>
 	
 		<!--  Framework JS -->
-		<script th:src="@{/webjars/jquery/3.5.1/jquery.slim.min.js}"></script>	
-		<script th:src="@{/webjars/popper.js/1.16.0/umd/popper.min.js}"></script>
-		<script th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
-		<script th:src="@{/webjars/bootstrap-vue/2.16.0/dist/bootstrap-vue.min.js}"></script>
-		<script th:src="@{/webjars/bootstrap-vue/2.16.0/dist/bootstrap-vue-icons.min.js}"></script>
-		<script th:src="@{/webjars/axios/0.20.0/dist/axios.min.js}"></script>
-		<script th:src="@{/webjars/moment/2.27.0/min/moment.min.js}"></script>
+		
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+		crossorigin="anonymous"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+			crossorigin="anonymous"></script>
+		<script
+			src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+			integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+			crossorigin="anonymous"></script>
+		<script
+			src="https://unpkg.com/bootstrap-vue@2.16.0/dist/bootstrap-vue.min.js"></script>
+			<script
+			src="https://unpkg.com/bootstrap-vue@2.16.0/dist/bootstrap-vue-icons.min.js"></script>
+		<script src="https://unpkg.com/axios@0.20.0/dist/axios.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/moment@2.27.0/moment.min.js"></script>
 	
 		<!-- Main Vue Program -->
 		<script th:src="'vue/home.vue.js?v='+${buildtime}" defer></script>
